test/compilable/imports/fwdref8412traits.d
module imports.fwdref8412traits;

import imports.fwdref8412uni_tab;
