test/fail_compilation/imports/fail313a.d
module imports.fail313a;

private import imports.fail313stdio;
